--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,20 @@
-setuptools==1.0
-backcall==0.1.0
-backports.entry-points-selectable==1.1.1
-certifi==2021.10.8
-colorama==0.4.1
-decorator==4.4.2
-distlib==0.3.3
-filelock==3.4.0
-importlib-metadata==4.8.2
-ipykernel==5.3.0
-ipython==7.15.0
-ipython-genutils==0.2.0
-isort==4.3.21
-jedi==0.17.0
-jupyter-core==4.6.3
-lazy-object-proxy==1.4.2
-mccabe==0.6.1
-parso==0.7.0
-pickleshare==0.7.5
-platformdirs==2.4.0
-prompt-toolkit==3.0.5
-Pygments==2.6.1
-pylint==2.4.2
-python-dateutil==2.8.1
-pyzmq==19.0.1
-traitlets==4.3.3
-typed-ast==1.4.0
-typing_extensions==4.0.1
-virtualenv==20.10.0
-wcwidth==0.2.3
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.15.1
+jsonify==0.5
+MarkupSafe==1.1.1
+numpy==1.19.0
+requests==2.24.0
+scikit-learn==0.23.1
+scipy==1.5.0
+sklearn==0.0
+threadpoolctl==2.1.0
+urllib3==1.25.9
+Werkzeug==1.0.1
 wincertstore==0.2
-wrapt==1.11.2
-zipp==3.6.0
+gunicorn
